# Voice-conversion_test

./: .gitignore  README.md  config.yaml  notes.txt  pyproject.toml  test.py
data/HERTA/: metadata.csv
data/MARCH_7TH/: metadata.csv
src/voice_code/database/: voice-scrape-firestoer.py
src/voice_code/voice_initiation/: voice_scrape.py  xtts.py  xxxxxx.py
src/voice_conversion/TTS/: __init__.py
src/voice_conversion/database/: access_database.py
src/voice_conversion/sentiment_analysis/: sentiment.py
src/voice_conversion/voice_initiation/: audio_matching.py  voice-scrape.py  voice_scraping.py  xtts.py
src/voice_conversion/voice_initiation/data/HERTA/: metadata.csv
src/voice_conversion/voice_initiation/data/MARCH_7th/: metadata.csv
