[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-conversion"
version = "0.1.0"
description = "Voice conversion project"
dependencies = [
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "filelock==3.17.0",
    "fsspec==2025.2.0",
    "huggingface-hub==0.28.1",
    "idna==3.10",
    "Jinja2==3.1.5",
    "llvmlite==0.44.0",
    "MarkupSafe==3.0.2",
    "more-itertools==10.6.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numba==0.61.0",
    "numpy==2.1.3",
    "openai-whisper==20240930"
]
