[project]
name = "voice-conversion"
version = "0.1.0"
description = "Bring your dreams to life"
authors = [
    {name = "Ayush Barik",email = "coolayush2017@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "sounddevice (>=0.5.1,<0.6.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "speechrecognition (>=3.14.1,<4.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "pyttsx3 (>=2.98,<3.0)",
    "torch (>=2.6.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "google-cloud-firestore (>=2.20.0,<3.0.0)",
    # "fish-speech @ git+https://github.com/fishaudio/fish-speech.git",
    "numpy (>=1.24,<2.2)",
    "pyrootutils (>=1.0.4,<2.0.0)",
    "openai-whisper (>=20240930,<20240931)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "voice_conversion", from = "src" },
    { include = "sentiment_analysis", from = "src/voice_conversion" },
    { include = "voice_initiation", from = "src/voice_conversion" },
    { include = "TTS", from = "src/voice_conversion" }
]
